--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=chenxiaoyue
 spring.datasource.password=Aa19970812
 spring.datasource.driver-class-name=org.h2.Driver
+mybatis.configuration.map-underscore-to-camel-case=true
+
